<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button11"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:onClick="button11"
        android:text="@string/pound"
        app:layout_constraintEnd_toStartOf="@+id/button17"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button9"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:onClick="button9"
        android:text="@string/dol"
        app:layout_constraintEnd_toStartOf="@+id/button10"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button17"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:onClick="button12"
        android:text="@string/griv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:onClick="button8"
        android:text="@string/rub"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:onClick="button10"
        android:text="@string/eu"
        app:layout_constraintEnd_toStartOf="@+id/button11"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:onClick="button2"
        android:text="@string/button2_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout2"
        android:layout_width="415dp"
        android:layout_height="79dp"
        android:layout_marginBottom="80dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="198dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorGrey"
            android:hapticFeedbackEnabled="false"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="140dp"
        android:onClick="button1"
        android:text="@string/Button1_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="415dp"
        android:layout_height="79dp"
        android:layout_marginTop="140dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGrey"
            android:inputType="number"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rub"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layout1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/output"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dol"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/layout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout1"
        app:layout_constraintVertical_bias="0.977" />

    <Button
        android:id="@+id/button4"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:onClick="button4"
        android:text="@string/dol"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button5"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:onClick="button7"
        android:text="@string/griv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button5"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:onClick="button5"
        android:text="@string/eu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button6" />

    <Button
        android:id="@+id/button3"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:onClick="button3"
        android:text="@string/rub"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:layout_width="70dp"
        android:layout_height="41dp"
        android:layout_marginEnd="4dp"
        android:layout_marginRight="4dp"
        android:onClick="button6"
        android:text="@string/pound"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button7" />

</androidx.constraintlayout.widget.ConstraintLayout>